Stavova informace o postupu

--- a/kostra.tex
+++ b/kostra.tex
@@ -1425,7 +1425,7 @@ stav <= reset; -- nelze stav <= "00"
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Metody rasterizace 2D vektorových objektů: úseček, kružnic a křivek} \label{cha:11}
 
-4. semestr, IZG
+4. semestr, IZG, 3. a 6. přednáška
 
 
 \subsection{Počítačová grafika}
@@ -1603,6 +1603,46 @@ Uniformní: $t_{i+1} - t_i$ konstantní.
 \paragraph{NURBS} Non-Uniform Rational B-Spline -- zobecnění B-Spline křívek, přidány váhové koeficienty.
 
 Invariantní vůči lineárním transformacím.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\chapter{Transformace, reprezentace a zobrazení 3D objektů} \label{cha:11}
+
+5. semestr, IZG, 5. přednáška
+
+
+
+
+
+
 
 
 
